# CC_Group7_CW2_BE

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  docker-compose.yml  post-create.sh
app/: db.sqlite3  start.sh
app/app/: api.py  settings.py  urls.py
app/app/services/: env_manager.py
app/authentication/: admin.py  api.py
app/authentication/authsession/: controller.py  models.py  schema.py  services.py
app/authentication/migrations/: 0001_initial.py
app/authentication/user/: controller.py  schema.py
app/reservation/: admin.py  api.py
app/reservation/migrations/: 0001_initial.py
app/reservation/reservables/: controller.py  models.py  schema.py
app/reservation/reservation/: controller.py  models.py  schema.py
